--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -11,4 +11,13 @@ p {
   padding: 10px;
   width: 200px;
   margin: 10px auto;
+}
+button {
+  padding: 10px 40px;
+  background-color: rgb(68, 68, 68);
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 24px;
+  cursor: pointer;
 } 
+button:hover {background-color: red;}
