--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,19 +3,11 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-h1 {text-transform: uppercase;}
+h1 {text-transform: uppercase; text-align: center;}
 p {
   background-color: rgb(198, 227, 252);
   padding: 10px;
-  width: 200px;
+  width: 400px;
   margin: 10px auto;
+  text-align: center;
 }
-button {
-  padding: 10px 40px;
-  background-color: rgb(68, 68, 68);
-  color: rgb(255, 255, 255);
-  border: none;
-  border-radius: 24px;
-  cursor: pointer;
-} 
-button:hover {background-color: red;}
