--- a/react-app/src/components/layout/Footer.module.css
+++ b/react-app/src/components/layout/Footer.module.css
@@ -2,9 +2,20 @@ footer {
   background-color: black;
   color: white;
   padding: 60px;
-  text-align: center;
   position: absolute;
   bottom: 0;
   width: 100%;
   box-sizing: border-box;
+  
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
 }
+footer svg {
+  color: lightblue;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: .5s;
+}
+footer svg:hover {color: aqua;}
