--- a/costs/src/components/layout/Container.module.css
+++ b/costs/src/components/layout/Container.module.css
@@ -1,5 +1,6 @@
 .container {
-  width: 1280px;
+  width: 100%;
+  max-width: 1280px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
