--- a/costs/src/components/layout/NavBar.module.css
+++ b/costs/src/components/layout/NavBar.module.css
@@ -18,3 +18,34 @@
   color: #ffbb33;
   transition: .5s;
 }
+.show_menu, .close_menu {display: none;}
+@media screen and (max-width: 580px) {
+  .list {
+    position: fixed;
+    top: 0;
+    left: 100%;
+    background-color: #222;
+    color: #ffbb33;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+  }
+  .item a {color: #ffbb33;}
+  .show_menu {
+    color: #ffbb33;
+    display: flex;
+    font-size: 2em;
+    margin: auto 0;
+  } 
+  .close_menu {
+    display: block;
+    color: #ffbb33;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 2em;
+  }
+}
