--- a/costs/src/components/pages/Home.module.css
+++ b/costs/src/components/pages/Home.module.css
@@ -18,3 +18,7 @@
   width: 350px;
   margin: 2em 0;
 }
+@media screen and (max-width: 580px) {
+  .home_container h1 {font-size: 1.5em;}
+  .home_container p {text-align: center;}
+}
