--- a/costs/src/components/layout/Footer.module.css
+++ b/costs/src/components/layout/Footer.module.css
@@ -9,7 +9,7 @@
   justify-content: center;
   gap: 30px;
   list-style: none;
-  margin-top: 10px;
+  margin-bottom: 20px;
 }
 .social_list li svg {
   font-size: 1.5em;
