--- a/costs/src/components/pages/Contact.module.css
+++ b/costs/src/components/pages/Contact.module.css
@@ -1,6 +1,7 @@
 .contact_container {
   width: 90%;
   max-width: 480px;
+  max-height: 420px;
   margin: 40px auto;
   padding: 20px;
   background-color: #b1adad;
